--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head></head>
   <body>
+    <div>test</div>
     <script async="" defer="" src="http://connect.facebook.net/en_US/sdk/xfbml.adlibraryspendtracker.js#xfbml=1&amp;version=v7.0"></script>
     <div id="fb-root"></div>
       <script async defer src="http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
